force-app/main/default/objects/Software_Feature__c/Software_Feature__c.object-meta.xml
<CustomObject>
    <description>This holds software features used by Zentitle for software licensing.</description>
    <label>Software Feature</label>
    <nameField>
        <displayFormat>FEAT-{00000000}</displayFormat>
        <label>Software Feature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>