force-app/main/default/objects/Software_Feature__c/fields/Feature_Key__c.field-meta.xml
<CustomField>
    <fullName>Feature_Key__c</fullName>
    <description>This is the featurekey used to identify it in Zentitle.</description>
    <inlineHelpText>This is the featurekey used to identify it in Zentitle.</inlineHelpText>
    <label>Feature Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>