force-app/main/default/objects/Software_Feature__c/fields/Feature_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Type__c</fullName>
    <description>This is the feature type and is created in Zentitle.</description>
    <inlineHelpText>This is the type of the feature. It is either bool, consumption, elementPool, or floating.</inlineHelpText>
    <label>Feature Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>