force-app/main/default/objects/Software_Feature__c/fields/Feature_Used__c.field-meta.xml
<CustomField>
    <fullName>Feature_Used__c</fullName>
    <description>This is the qty used of the feature and is an integer.</description>
    <inlineHelpText>This is the qty used of the feature and is an integer.</inlineHelpText>
    <label>Feature Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>