force-app/main/default/objects/Software_Feature__c/fields/Feature_Value__c.field-meta.xml
<CustomField>
    <fullName>Feature_Value__c</fullName>
    <description>This is the value of the feature, for features that are true or false they are 1 or 0 respectively.</description>
    <inlineHelpText>This is the value of the feature, for features that are true or false they are 1 or 0 respectively.</inlineHelpText>
    <label>Feature Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>