force-app/main/default/objects/Software_Feature__c/fields/Zentitle_Feature_ID__c.field-meta.xml
<CustomField>
    <fullName>Zentitle_Feature_ID__c</fullName>
    <description>This is the external ID that correlates to the ID stored in Zentitle.</description>
    <inlineHelpText>This is the external ID that correlates to the ID stored in Zentitle.</inlineHelpText>
    <label>Zentitle Feature ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>