force-app/main/default/objects/Software_Feature__c/validationRules/Feature_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Feature_Value_Validation</fullName>
    <active>true</active>
    <description>This validates that values match the feature type</description>
    <errorConditionFormula>OR(
  AND(
    (Feature_Type__c = &apos;bool&apos;),
    NOT(OR(
      (Feature_Value__c) = 1,
      (Feature_Value__c) = 0)
    ))
  
)</errorConditionFormula>
    <errorDisplayField>Feature_Value__c</errorDisplayField>
    <errorMessage>The Value must either be a number or if they type is bool it should be 0 for disabled and 1 for enabled.</errorMessage>
</ValidationRule>